# qt_sample

./: Makefile  README.md  main.qml  pixi.toml
src/: CMakeLists.txt  main.cpp
src/hello/: 3dintro.qml  CMakeLists.txt  ClickableHelloWorld.qml  MessageLabel.qml  MyTreeView.qml  animation.qml  application.qml  binding.qml  getstarted.qml  layouts.qml  main.cpp  picking.qml  treeview.qml  tutorial.qml
src/hellocube/: CMakeLists.txt  main.cpp  main.qml
